--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
+    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
@@ -23,9 +24,8 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
-    "node-sass": "^8.0.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "sass-loader": "^13.2.0"
+    "styled-components": "^5.3.6"
   }
 }
