--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
     "css-loader": "^3.5.3",
+    "less": "^4.1.3",
+    "less-loader": "^11.1.0",
     "style-loader": "^1.2.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
