--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "start:prod": "npm run webpack:prod",
     "webpack:dev": "webpack serve --config ./webpack.config.js --mode development",
     "webpack:prod": "webpack --config ./webpack.config.js --mode production",
-    "server": "npm run start:prod && node server/index.js"
+    "server": "npm run start:prod && node server/index.js",
+    "server:dev": "node server/index.js"
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
@@ -17,6 +18,7 @@
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
     "css-loader": "^3.5.3",
+    "dotenv-webpack": "^8.0.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "style-loader": "^1.2.1",
@@ -26,6 +28,7 @@
   },
   "dependencies": {
     "axios": "^1.2.0",
+    "classnames": "^2.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "styled-components": "^5.3.6"
