--- a/package.json
+++ b/package.json
@@ -13,15 +13,14 @@
   },
   "devDependencies": {
     "@babel/core": "^7.20.5",
-    "@babel/polyfill": "^7.0.0",
     "@babel/preset-env": "^7.20.2",
     "@babel/preset-react": "^7.18.6",
     "babel-loader": "^9.1.0",
     "css-loader": "^3.5.3",
-    "dotenv-webpack": "^8.0.1",
     "less": "^4.1.3",
     "less-loader": "^11.1.0",
     "style-loader": "^1.2.1",
+    "url-loader": "^4.1.1",
     "webpack": "^5.75.0",
     "webpack-cli": "^5.0.0",
     "webpack-dev-server": "^4.11.1"
